force-app/main/default/objects/pymtTest__Audit_Log__c/pymtTest__Audit_Log__c.object-meta.xml
<CustomObject>
    <description>Audit trail for payment-related activities</description>
    <label>Audit Log</label>
    <nameField>
        <displayFormat>AL-{0000000}</displayFormat>
        <label>Audit Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>