force-app/main/default/objects/pymtTest__Audit_Log__c/fields/pymtTest__Account__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Audit Logs</relationshipLabel>
    <relationshipName>Payment_Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>