force-app/main/default/objects/pymtTest__Audit_Log__c/fields/pymtTest__Action__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Action__c</fullName>
    <description>The action that was performed</description>
    <label>Action</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>