force-app/main/default/objects/pymtTest__Audit_Log__c/fields/pymtTest__Details__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Details__c</fullName>
    <description>Additional details about the action</description>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>