force-app/main/default/objects/pymtTest__Audit_Log__c/fields/pymtTest__User__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__User__c</fullName>
    <label>User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Audit Logs</relationshipLabel>
    <relationshipName>Audit_Logs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>